Fixed spacing

--- a/style.css
+++ b/style.css
@@ -226,7 +226,6 @@ html {
   background-color: #000;
   border: 1px solid var(--grey);
   border-left: 5px solid var(--grey);
-  border-radius: 10px;
   padding: 15px;
   transition: transform 0.5s ease;
 }
@@ -530,6 +529,8 @@ h1 span {
   width: 100%;
 }
 .profile-box {
+  user-select: none;
+  cursor: grab;
   position: relative;
   border-radius: 20px;
   transform-style: preserve-3d;
@@ -741,7 +742,7 @@ h1 span {
   text-align: center;
   width: 100%;
   max-width: 200px;
-  height: 250px;
+  height: fit-content;
   margin: 5px;
   transition: background 0.5s;
   cursor: pointer;
@@ -1225,7 +1226,6 @@ h1 span {
 }
 
 .actionBtn {
-  border: 1px solid #333;
   cursor: pointer;
   -webkit-tap-highlight-color: transparent;
   display: flex;
@@ -2379,17 +2379,10 @@ body {
     margin: 2px;
     width: fit-content;
     height: fit-content;
-    border: 1px solid #333;
     font-size: 0.7rem;
-    cursor: pointer;
     -webkit-tap-highlight-color: transparent;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
     z-index: 0;
     transition: 1s;
-    color: #fff;
     padding: 20px;
   }
   .actionBtn::before {
@@ -2540,16 +2533,11 @@ body {
     font-size: var(--fontSize);
     width: 150px;
     height: 50px;
-    border: 1px solid #333;
     cursor: pointer;
     -webkit-tap-highlight-color: transparent;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     position: relative;
     z-index: 0;
     transition: 1s;
-    color: #fff;
   }
 
   .actionBtn::before {
